# arxiv-rag-v3-codex

./: .env.example  ISSUES.md  deep-orbiting-boot.md  docker-compose.yml  pyproject.toml
data/: ng_keywords.json
data/analysis/: stage2a_edge_cases.json  stage2b_rejected.json  stage2b_verified.json
data/collection/: collection_state.json  edge_cases_2024-01.json  edge_cases_2024-02.json  edge_cases_2024-03.json  edge_cases_2024-04.json  edge_cases_2025-01.json  edge_cases_2025-02.json  edge_cases_2025-03.json  edge_cases_2025-04.json  edge_cases_2025-05.json  gemini_filtered_2025-01.json  gemini_filtered_2025-02.json  gemini_filtered_2025-03.json  gemini_filtered_2025-04.json  gemini_filtered_2025-05.json  gemini_filtered_2025-06.json  gemini_filtered_2025-07.json  gemini_filtered_2025-08.json  gemini_filtered_2025-09.json  gemini_filtered_2025-10.json  (+18 more)
docs/: api_endpoint_management.md  benchmark_parallel_strategy.md  code_issues.md  conceptual_query_examples.md  conceptual_query_improvement_summary.md  improvement_plan.md  phase2_reprocess_execution_plan.md  v2_benchmark_execution_plan.md  v2_to_v3_progress_20260313.md  v3_bootstrap_checklist.md
scripts/: 01_collect.py  02_download.py  02_parse.py  03_embed.py  06_evaluate.py  08_generate_synthetic_benchmark.py  09_enrich_chunks.py  11_reprocess_pipeline.py  collect_extended.py  compute_scores.py  fetch_citations.py  init_local_db.sql  migrate_to_local_pg.py  migrate_to_qdrant.py  run_benchmark_parallel.py  select_top_papers.py  semantic_filter.py  test_3large_embedding.py  test_3large_hyde.py  test_search.py  tune_weights.py  verify_v2_architecture.py
(+36 files in other folders)
